recursion.logo.lessons.recursion.logo.tree.Tree.scala.error
Tree:2: error: value =! is not a member of Int
  if(steps=!0){
          ^Tree:4: error: not found: value rigth
    rigth(angle)
    ^Tree:8: error: not found: value rigth
    rigth(angle)
    ^