recursion.logo.lessons.recursion.logo.tree.Tree.scala.code
def tree(steps:Int, length:Double, angle:Double, shrink:Double)    {
  if(steps=!0){
    forward(length)
    rigth(angle)
    tree(steps-1,length*shrink,angle,shrink)
    left(2*angle)
    tree(steps-1,length*shrink,angle,shrink)
    rigth(angle)
    backward(length)
  }


}